[fix]:fixed positioning & gap

--- a/components/homepg.css
+++ b/components/homepg.css
@@ -114,3 +114,7 @@ background-color: var(--primary-color);
     color: var(--white-color);
     padding: 1rem;
 }
+
+.gap-btwn{
+  gap: 1rem;
+}
